Melhoria na organização do código do Main.cpp. Criação de mensagens para maior interatividade com o usuário.

--- a/TransactionsReader.vcxproj
+++ b/TransactionsReader.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="DateHour.h" />
     <ClInclude Include="DateHourFormat.h" />
+    <ClInclude Include="Main.h" />
     <ClInclude Include="Transaction.h" />
     <ClInclude Include="TransactionReader.h" />
   </ItemGroup>
